--- a/css/style.css
+++ b/css/style.css
@@ -47,12 +47,9 @@ header{
     color: #000000;
 }
 
-.quiz-beginning h1{
-    margin-bottom: 27px;
-}
 
-.questions-creation h1{
-    margin-bottom: 36px;
+.questions-creation h1, .quiz-beginning h1{
+    margin-bottom: 29px;
 }
 
 .beginning-board, .questions-creation-board{ /*dá pra usar para quase todos os quadros, tanto da criação quanto da exibição de quiz*/
@@ -157,3 +154,24 @@ header{
     display: none;
 }
 
+@media (max-width: 1100px) {
+    .quiz-beginning h1, .questions-creation h1{
+        font-size: 20px;
+
+    }
+
+    .beginning-board, .questions-creation-board{
+        width: 100%;
+        box-sizing: border-box;
+        padding-left: 20px;
+        padding-right: 16px;   
+    } 
+
+    .red-button{
+        width: 324px;
+    }
+
+    .quiz-beginning button, .questions-creation button{
+        margin-top: 30px;
+}   
+}
