--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ body{
     font-family: 'Roboto', sans-serif; 
     padding-top: 69px;
     padding-bottom: 50px;
+    background-color: #fafafa;
 }
 
 body div{
@@ -31,6 +32,76 @@ header{
     color: #FFFFFF;
 }
 
+.main-page {
+    width: 1050px;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    font-size: 20px;
+
+    margin: auto;
+}
+
+.created-quizzes{
+    width: 100%;
+
+    display: flex;
+    justify-content: center;
+    margin: 70px auto;
+
+   
+}
+
+.no-quizz{
+    width: 100%;
+    height: 180px;
+
+    text-align: center;
+
+    border: 1px dashed #D5D5D5;
+    
+    
+    border-radius: 5px;
+}
+
+.no-quizz p {
+    margin-top: 50px;
+    margin-bottom: 15px;
+
+    color: #d5d5d5;
+    
+}
+
+.create-quizz{
+    width: 150px;
+    height: 40px;
+
+    background-color: #fafafa;
+    border-radius: 50px;
+    border: 1px dashed #EC362D;
+
+    color: #EC362D;
+}
+
+.quizz {
+    width: 340px;
+    height: 180px;
+}
+
+.all-quizzes {
+    width: 100%;
+    
+    display: flex;
+    justify-content: left;
+}
+
+.all-quizzes p{
+    margin-left: 0px;
+    margin-right: auto;
+}
 .quiz-beginning, .questions-creation, .level-creation, .quiz-success{  
     width: 100%;
     height: 100%;
