--- a/css/style.css
+++ b/css/style.css
@@ -383,6 +383,10 @@ header{
     height: 185px;
 }
 
+.unselected {
+    opacity: 0.3;
+}
+
 @media (max-width: 1100px) {
     .quiz-beginning, .questions-creation, .level-creation, .quiz-success{
         padding-top: 38px;
