--- a/css/style.css
+++ b/css/style.css
@@ -387,6 +387,14 @@ header{
     opacity: 0.3;
 }
 
+.correct {
+    color: green;
+}
+
+.wrong {
+    color: red;
+}
+
 @media (max-width: 1100px) {
     .quiz-beginning, .questions-creation, .level-creation, .quiz-success{
         padding-top: 38px;
