--- a/css/style.css
+++ b/css/style.css
@@ -37,10 +37,17 @@ header{
     display: flex;
     flex-direction: column;
     align-items: center;
-
+    
     font-size: 20px;
 
     margin: auto;
+}
+
+.all-quizzes-header{
+    width: 1051px;
+    text-align: left;
+    font-weight: 700;
+    margin-bottom: 10px;
 }
 
 .created-quizzes{
@@ -431,7 +438,7 @@ header{
     font-size: 20px;
     font-weight: bold;
 
-    word-wrap: break-word;
+    word-wrap: break-wordgit;
 }
 
 .quizz-answer img {
@@ -506,13 +513,13 @@ header{
 }
 
 @media (max-width: 1040px) {
-    .created-quizzes{
+    .created-quizzes, .all-quizzes-header{
         width: 700px;
     }
 }
 
 @media (max-width: 690px) {
-    .created-quizzes{
+    .created-quizzes, .all-quizzes-header{
         width: 340px;
     }
 }
