--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,7 @@ header{
 .quizz p{
     position: absolute;
     bottom: 5px;
-
+    left: 5px; 
     color: #ffffff;
 
     z-index: 5;
@@ -267,7 +267,7 @@ header{
     position: relative;
 }
 
-.quiz-success div:after {
+.quiz-success div:after, .quizz::after {
     height: 100%;
     width: 100%;
     content:"";
@@ -333,7 +333,7 @@ header{
     margin-top: 10px;
 }
 
-.questions-creation-board ion-icon:hover, .level-creation-board ion-icon:hover, .red-button:hover, .home-button:hover, header h1:hover, .quiz-success div:hover{
+.questions-creation-board ion-icon:hover, .level-creation-board ion-icon:hover, .red-button:hover, .home-button:hover, header h1:hover, .quiz-success div:hover, .my-quizzes-header ion-icon:hover{
     cursor: pointer;
     filter: brightness(0.9);
 }
