--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ header{
     top:0px;
     left: 0px;
 
-    z-index: 10;
+    z-index: 100;
 
     width: 100%;
     height: 69px;
@@ -97,6 +97,8 @@ header{
 }
 
 .quizz {
+    max-width: 340px;
+    
     border-radius: 5px;
     
     overflow-x: hidden;
